@@ -1,5 +1,12 @@
 2002-12-16  James Henstridge  <james@daa.com.au>
 
+	* cvs.py (CVSRoot._login): take a pointer to the buildscript, and
+	use it to execute the cvs login command.
+
+	* moduleinfo.py (gnome20.gnome-vfs-extras): add.
+	(gnome22.gnome-media): require gstreamer.
+	(gnome20.gnome-media): get gnome-2-0 branch.
+
 	* jhbuild.py (do_dot): allow user to run "jhbuild dot" to print a
 	dot file that can be processed with graphviz to produce a nice
 	directed graph of what will be built.
